<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.hp</groupId>
	<artifactId>Selenium_DaaS_Automation</artifactId>
	<packaging>jar</packaging>
	<version>${buildNumber}</version>
	<name>Selenium_DaaS_Automation</name>
	<description>Selenium_DaaS_Automation</description>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<BrowserName>Chrome</BrowserName>
		<Environment>US-STAGE-WEP</Environment>
		<Service>PROACTIVE-INSIGHTS</Service>
		<Language>ENGLISH</Language>
		<suiteXmlFile>testng.xml</suiteXmlFile>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<build.version>${buildNumber}</build.version>
		<email></email>
		<OSName>WINDOWS</OSName>
		<UIVersion>VENEER3</UIVersion>
		<runMode>LOCAL</runMode>
	</properties>

	<scm>
		<connection>scm:svn:http://127.0.0.1/dummy</connection>
		<developerConnection>scm:svn:https://127.0.0.1/dummy</developerConnection>
		<tag>HEAD</tag>
		<url>http://127.0.0.1/dummy</url>
	</scm>
	<dependencies>

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.0.0</version>
			<scope>compile</scope>
		</dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>1.9.24</version>
        </dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>4.20.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>3.14</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>3.14</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml-schemas</artifactId>
			<version>3.14</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-scratchpad</artifactId>
			<version>3.14</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.17.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.17.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.4</version>
		</dependency>
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>3.3</version>
		</dependency>
		<!--		<dependency>-->
		<!--			<groupId>javax.mail</groupId>-->
		<!--			<artifactId>mail</artifactId>-->
		<!--			<version>1.5.0-b01</version>-->
		<!--		</dependency>-->
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>javax.mail-api</artifactId>
			<version>1.6.2</version>
		</dependency>
		<dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.40</version>
            <scope>provided</scope>
        </dependency>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>1.6.2</version>
		</dependency>
		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>1.1.1</version>
		</dependency>
		<dependency>
			<groupId>io.appium</groupId>
			<artifactId>java-client</artifactId>
			<version>5.0.0-BETA9</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20170516</version>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.8.3</version>
		</dependency>
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.8.11.1</version>
		</dependency>
		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
			<version>2.3.23</version>
		</dependency>
		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>3.0.6</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.surefire</groupId>
			<artifactId>surefire-testng</artifactId>
			<version>2.20.1</version>
		</dependency>
		<dependency>
			<groupId>com.beust</groupId>
			<artifactId>jcommander</artifactId>
			<version>1.72</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.11</version>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.0.4</version>
		</dependency>
		<dependency>
			<groupId>com.lowagie</groupId>
			<artifactId>itext</artifactId>
			<version>2.1.7</version>
		</dependency>
		<dependency>
			<groupId>com.launchdarkly</groupId>
			<artifactId>launchdarkly-client</artifactId>
			<version>3.0.3</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.5</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore -->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
			<version>4.4.9</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.0.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>3.1.1</version>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>json-schema-validator</artifactId>
			<version>3.1.1</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.tika</groupId>
			<artifactId>tika-parsers</artifactId>
			<version>1.21</version>
		</dependency>
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk</artifactId>
			<version>1.11.213</version>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk15on</artifactId>
			<version>1.51</version>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk15on</artifactId>
			<version>1.51</version>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpg-jdk15on</artifactId>
			<version>1.51</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>31.0.1-jre</version>
		</dependency>
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>5.8.0</version>
		</dependency>
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-iot</artifactId>
			<version>1.12.783</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-core -->
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-core</artifactId>
			<version>1.12.783</version>
		</dependency>
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-sts</artifactId>
			<version>1.12.783</version>
		</dependency>
		<!-- JSON processing dependency for NetworkLogsCapture -->
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20230227</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<compilerArgument>-Xlint:all</compilerArgument>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
					<encoding>UTF8</encoding>
					<release>11</release>
					<compilerArgs>
						<arg>--add-modules</arg>
						<arg>java.scripting</arg>
					</compilerArgs>
					<annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.40</version>
                        </path>
                    </annotationProcessorPaths>
				</configuration>
			</plugin>

			<!--
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.4</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<phase>package</phase>
						<goals>
							<goal>javadoc</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<reportOutputDirectory>${project.basedir}/target</reportOutputDirectory>
					<destDir>javadoc</destDir>
				</configuration>
			</plugin>
			-->

			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
			</plugin>

			<!-- Generates the main JAR -->
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.5.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<finalName>${name}</finalName>
							<appendAssemblyId>false</appendAssemblyId>
							<descriptors>
								<descriptor>src/assembly/assembly.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<archive>
						<manifest>
							<mainClass>com.daasui.RunTests</mainClass>
						</manifest>
						<manifestEntries>
							<Class-Path>.</Class-Path>
						</manifestEntries>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
					<forkCount>0</forkCount>
					<reuseForks>false</reuseForks>
					<testFailureIgnore>true</testFailureIgnore>
					<systemPropertyVariables>
						<browserName>${BrowserName}</browserName>
						<environment>${Environment}</environment>
						<languageCode>${Language}</languageCode>
						<service>${Service}</service>
						<email></email>
						<osName>${OSName}</osName>
						<uiVersion>${UIVersion}</uiVersion>
						<runMode>${runMode}</runMode>
					</systemPropertyVariables>
					<suiteXmlFiles>
						<suiteXmlFile>suites/${suiteXmlFile}</suiteXmlFile>
					</suiteXmlFiles>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.1</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>/log</exclude>
								<exclude>/test-output</exclude>
								<exclude>/test-report</exclude>
								<exclude>/test-screenshots</exclude>
								<exclude>/test-videos</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>1.4</version>
				<executions>
					<execution>
						<id>buildnumber</id>
						<phase>validate</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<format>Version.{0,number}.{1,number}.({2,date,yyyy-MM-dd_HH-mm})</format>
					<items>
						<item>buildNumber0</item>
						<item>buildNumber1</item>
						<item>timestamp</item>
					</items>
					<doCheck>false</doCheck>
					<doUpdate>false</doUpdate>
					<shortrevisionlength>5</shortrevisionlength>
					<revisionOnScmFailure>unknownbuild</revisionOnScmFailure>
				</configuration>
			</plugin>
		</plugins>

		<resources>
			<resource>
				<filtering>true</filtering>
				<directory>${project.basedir}/suites</directory>
				<targetPath>${project.build.directory}/suites</targetPath>
				<includes>
					<include>*.xml</include>
				</includes>
			</resource>

			<!-- Include properties in target folder -->
			<resource>
				<filtering>true</filtering>
				<directory>${project.basedir}/properties</directory>
				<targetPath>${project.build.directory}/properties</targetPath>
				<includes>
					<include>*.properties</include>
				</includes>
			</resource>

			<resource>
				<filtering>true</filtering>
				<directory>src/main/resources</directory>
				<includes>
					<include>*.properties</include>
				</includes>
			</resource>

			<!-- Include credentials in target folder -->
			<resource>
				<filtering>true</filtering>
				<directory>${project.basedir}/credentials</directory>
				<targetPath>${project.build.directory}/credentials</targetPath>
				<includes>
					<include>*.properties</include>
				</includes>
			</resource>

			<!-- Include locales folder and its subfolders in to target folder -->
			<resource>
				<filtering>true</filtering>
				<directory>${project.basedir}/locales</directory>
				<targetPath>${project.build.directory}/locales</targetPath>
			</resource>

			<!-- Filtering should be false below; else it corrupts the XLSX -->
			<resource>
				<filtering>false</filtering>
				<directory>${project.basedir}/testdata</directory>
				<targetPath>${project.build.directory}/testdata</targetPath>
				<includes>
					<include>*.xlsx</include>
				</includes>
			</resource>

			<resource>
				<filtering>false</filtering>
				<directory>${project.basedir}/lib</directory>
				<targetPath>${project.build.directory}/lib</targetPath>
				<includes>
					<include>*.exe</include>
				</includes>
			</resource>
		</resources>

		<finalName>${project.artifactId}-${project.version}</finalName>
	</build>
</project>
